--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.washingtonpost.amqp</groupId>
     <artifactId>amqp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <com.fasterxml.jackson.version>2.2.0</com.fasterxml.jackson.version>
+    </properties>
 
 
     <dependencies>
@@ -20,11 +23,22 @@
             <artifactId>amqp-client</artifactId>
             <version>3.3.4</version>
         </dependency>
-	<dependency>
-	    <groupId>com.google.code.gson</groupId>
-	    <artifactId>gson</artifactId>
-	    <version>2.2.4</version>
-	</dependency>
+        <!--The Best Serialization Library: Jackson-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
